--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "sass": "1.33.0",
+    "sass-loader": "7.3.1"
   },
   "eslintConfig": {
     "root": true,
