--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.21.1",
     "vuex": "3.6.0",
     "vue-router": "3.4.9",
-    "element-ui": "2.15.7"
+    "element-ui": "2.15.7",
+    "js-cookie": "2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
