--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vuex": "3.6.0",
     "vue-router": "3.4.9",
     "element-ui": "2.15.7",
-    "js-cookie": "2.2.0"
+    "js-cookie": "2.2.0",
+    "codemirror": "^5.49.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
