--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^2.6.14",
     "axios": "^0.21.1",
-    "vuex": "3.6.0",
-    "vue-router": "3.4.9",
+    "codemirror": "^5.49.0",
+    "core-js": "^3.8.3",
+    "echarts": "^5.4.1",
+    "echarts-gl": "^2.0.9",
     "element-ui": "2.15.7",
     "js-cookie": "2.2.0",
-    "codemirror": "^5.49.0"
+    "vue": "^2.6.14",
+    "vue-router": "3.4.9",
+    "vuex": "3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
